# hydra-explore

./: README.md  explore.ipynb  pyproject.toml
configs/: main.yaml
configs/datasets/: simple.yaml
notebook/: explore.ipynb
